--- a/models/tweety_bert/default_config/config.json
+++ b/models/tweety_bert/default_config/config.json
@@ -1,1 +1,25 @@
-{"experiment_name": "5377_test_run", "continue_training": false, "batch_size": 32, "d_transformer": 196, "nhead_transformer": 4, "num_freq_bins": 196, "dropout": 0.2, "dim_feedforward": 768, "transformer_layers": 4, "m": 250, "p": 0.01, "alpha": 1, "pos_enc_type": "relative", "learning_rate": 0.0005, "max_steps": 1e3, "eval_interval": 250, "save_interval": 250, "context": 1000, "weight_decay": 0.0, "early_stopping": true, "patience": 800, "trailing_avg_window": 200, "num_ground_truth_labels": 50}
+{
+    "experiment_name": "trial_run",
+    "continue_training": false,
+    "batch_size": 32,
+    "d_transformer": 196,
+    "nhead_transformer": 4,
+    "num_freq_bins": 196,
+    "dropout": 0.2,
+    "dim_feedforward": 768,
+    "transformer_layers": 4,
+    "m": 250,
+    "p": 0.01,
+    "alpha": 1,
+    "pos_enc_type": "relative",
+    "learning_rate": 0.0005,
+    "max_steps": 250,
+    "eval_interval": 100,
+    "save_interval": 250,
+    "context": 1000,
+    "weight_decay": 0.0,
+    "early_stopping": true,
+    "patience": 800,
+    "trailing_avg_window": 200,
+    "num_ground_truth_labels": 50
+}
